@@ -117,3 +117,7 @@ Junichi Uekawa (dancer@debian.org)
 
 Upstream page is available at 
 .B "http://www.netfort.gr.jp/~dancer/software/cowdancer.html"
+
+
+.SH "SEE ALSO"
+.BR "cowdancer-ilistcreate (" 1 ")"
