@@ -2,14 +2,16 @@ cowdancer (0.38) UNRELEASED; urgency=low
 
   [ Jan-Marek Glogowski ] 
   * Don't clean the environment when invoking dumpconfig 
+  (closes: #431993)
   * Better error handling when loading config
 
   [ Junichi Uekawa ]
   * document that i386/amd64 cross-arch building is not supported using
     cowbuilder.
   * add aptitude into chroot for pbuilder-satisfydepends-aptitude.
+  * add cowdancer-ilistcreate command, which creates ilist file.
 
- -- Junichi Uekawa <dancer@debian.org>  Wed, 29 Aug 2007 18:27:29 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Fri, 31 Aug 2007 09:06:07 +0900
 
 cowdancer (0.37) unstable; urgency=low
 
